<resources>
    <string name="app_name">Romeo J task</string>
    <string name="label_portfolio">Portfolio</string>
    <string name="label_ltp">LTP:</string>
    <string name="label_net_qty">NET QTY:</string>
    <string name="label_p_and_l">Profit &amp; Loss*</string>
    <string name="label_p_n_l">P&amp;L:</string>
    <string name="label_current_value">Current Value*</string>
    <string name="label_total_investment">Total Investment*</string>
    <string name="label_todays_p_and_l">Today\'s Profit &amp; Loss*</string>
    <string name="label_holdings">Holdings</string>
    <string name="label_positions">Positions</string>
</resources>